--- a/projectOhora/src/main/webapp/WEB-INF/commandHandler.properties
+++ b/projectOhora/src/main/webapp/WEB-INF/commandHandler.properties
@@ -1,4 +1,4 @@
 # requestURL=commandHandler mapping
 /example/test.do=mvc.command.ExampleHandler
-#/product/list.do=mvc.command.ListHandler
+/product/list.do=mvc.command.ListHandler
 
